# run_route_show

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  route_show.py
route_show/: __main__.py  cli.py  route_show.py
route_show/tests/: test_route_show.py
